# Techbench_

./: .gitignore  CMakeLists.txt  app_log.txt  build_log.txt  build_only.bat  main.cpp  path_debug.txt  rebuild_project.bat  resources.qrc  run_app.bat  run_debug.bat  startup_debug.txt
.cache/clangd/index/: anasayfawidget.cpp.ED79F947CCB9A6CF.idx  anasayfawidget.h.E0ADF8C7747FE131.idx  bagisistegidialog.cpp.EA98D3EE81D36344.idx  bagisistegidialog.h.DE752DE44D425C41.idx  bagiswidget.cpp.E8B22345074923ED.idx  bagiswidget.h.70C14524E805B487.idx  benchmarkwidget.cpp.8EF9D73234319696.idx  benchmarkwidget.h.DC40177B7F4A849B.idx  benchmarkworker.cpp.F2AEB658752C38A0.idx  benchmarkworker.h.B18049D4E5F3534F.idx  giriswidget.cpp.412DDD9997B379F7.idx  giriswidget.h.3880C1680E0AAABA.idx  karsilastirmawidget.cpp.A17F1213F6C6F5B9.idx  karsilastirmawidget.h.C662F426A85F4C6E.idx  kayitwidget.cpp.EEA21A791E48D8A2.idx  kayitwidget.h.BA09D9F6C8FB0975.idx  main.cpp.13F95CB4A348A414.idx  mainwindow.cpp.CA79C19635B8DAFD.idx  mainwindow.h.C6B7BD967309E5EB.idx  moderndialogs.cpp.A55C23B272A7137A.idx  moderndialogs.h.B1956A0A090B6A79.idx  networkmanager.cpp.C5436D8C4A8DA8A9.idx  networkmanager.h.1ABEE605E1177F89.idx  sifremiunuttumdialog.cpp.17C732E64D1EB28E.idx  sifremiunuttumdialog.h.063BCD267757A489.idx  submerchantdialog.cpp.AEE926E2551485EA.idx  submerchantdialog.h.DFF7D69DB803C1D7.idx  yardimwidget.cpp.278BF6E200E29629.idx  yardimwidget.h.85290492A6CEAB53.idx
Network/: networkmanager.cpp  networkmanager.h  networkmanager.ui  pricefetcher.cpp  pricefetcher.h
Widgets/Anasayfa/: anasayfawidget.cpp  anasayfawidget.h  anasayfawidget.ui
Widgets/Bagis/: bagisistegidialog.cpp  bagisistegidialog.h  bagiswidget.cpp  bagiswidget.h  bagiswidget.ui  moderndialogs.cpp  moderndialogs.h  submerchantdialog.cpp  submerchantdialog.h
Widgets/Benchmark/: benchmarkwidget.cpp  benchmarkwidget.h  benchmarkwidget.ui  benchmarkworker.cpp  benchmarkworker.h
Widgets/Common/: moderndialogs.h
Widgets/Destekci/: destekciwidget.cpp  destekciwidget.h
Widgets/Giris/: giriswidget.cpp  giriswidget.h  giriswidget.ui  sifremiunuttumdialog.cpp  sifremiunuttumdialog.h  sifremiunuttumdialog.ui
Widgets/Karsilastirma/: karsilastirmawidget.cpp  karsilastirmawidget.h  karsilastirmawidget.ui
Widgets/Kayit/: kayitwidget.cpp  kayitwidget.h  kayitwidget.ui
Widgets/Liderlik/: liderlikwidget.cpp  liderlikwidget.h
Widgets/Main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Widgets/Yardim/: yardimwidget.cpp  yardimwidget.h  yardimwidget.ui
backend/: .gitignore  create_donation_requests_table.sql  database_update.sql  db.js  package-lock.json  package.json  server.js  server_backup.js  test_scrape.js
backend/routes/: benchmark.js
